--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "expo": "~42.0.1",
-    "expo-app-loading": "^1.1.2",
-    "expo-font": "~9.2.1",
-    "expo-status-bar": "~1.0.4",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "expo": "^45.0.0",
+    "expo-app-loading": "~2.0.0",
+    "expo-font": "~10.1.0",
+    "expo-status-bar": "~1.3.0",
     "firebase": "8.2.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-45.0.0.tar.gz",
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
